--- a/index.html
+++ b/index.html
@@ -23,71 +23,77 @@
   </head>
   <body>
     <header class="page-header">
-      <nav class="header-nav">
-        <a class="logo header-logo" href="./index.html"
-          >Web<span class="logo-part">Studio</span></a
-        >
+      <div class="container header-container">
+        <nav class="header-nav">
+          <a class="logo header-logo" href="./index.html"
+            >Web<span class="logo-part">Studio</span></a
+          >
 
-        <ul class="nav-list">
-          <li class="nav-item">
-            <a class="nav-link" href="./index.html">Studio</a>
-          </li>
-          <li class="nav-item"><a class="nav-link" href="">Portfolio</a></li>
-          <li class="nav-item"><a class="nav-link" href="">Contacts</a></li>
-        </ul>
-      </nav>
+          <ul class="nav-list">
+            <li class="nav-item">
+              <a class="nav-link" href="./index.html">Studio</a>
+            </li>
+            <li class="nav-item"><a class="nav-link" href="">Portfolio</a></li>
+            <li class="nav-item"><a class="nav-link" href="">Contacts</a></li>
+          </ul>
+        </nav>
 
-      <address class="contacts">
-        <ul class="contacts-list">
-          <li class="contacts-item">
-            <a class="contacts-link" href="mailto:info@devstudio.com"
-              >info@devstudio.com</a
-            >
-          </li>
-          <li class="contacts-item">
-            <a class="contacts-link" href="tel:+110001111111"
-              >+11 (000) 111-11-11</a
-            >
-          </li>
-        </ul>
-      </address>
+        <address class="contacts">
+          <ul class="contacts-list">
+            <li class="contacts-item">
+              <a class="contacts-link" href="mailto:info@devstudio.com"
+                >info@devstudio.com</a
+              >
+            </li>
+            <li class="contacts-item">
+              <a class="contacts-link" href="tel:+110001111111"
+                >+11 (000) 111-11-11</a
+              >
+            </li>
+          </ul>
+        </address>
+      </div>
     </header>
 
     <main>
-      <section class="main-page" >
+      <section class="main-page">
         <h1 class="main-title">Effective Solutions for Your Business</h1>
         <button type="button" class="order-button">Order Service</button>
       </section>
 
       <section class="section2">
-  <h2 class="benefits-title">Benefits</h2>
-  <ul class="benefits-list">
-    <li class="benefits-item">
-      <h3 class="benefits-subtitle">Strategy</h3>
-      <p class="benefits-text">
-        Our goal is to identify the business problem to walk away with the perfect and creative solution.
-      </p>
-    </li>
-    <li class="benefits-item">
-      <h3 class="benefits-subtitle">Punctuality</h3>
-      <p class="benefits-text">
-        Bring the key message to the brand's audience for the best price within the shortest possible time.
-      </p>
-    </li>
-    <li class="benefits-item">
-      <h3 class="benefits-subtitle">Diligence</h3>
-      <p class="benefits-text">
-        Research and confirm brands with the strongest digital growth opportunities and minimize risk.
-      </p>
-    </li>
-    <li class="benefits-item">
-      <h3 class="benefits-subtitle">Technologies</h3>
-      <p class="benefits-text">
-        Design practice focused on digital experiences. We bring forth a deep passion for problem-solving.
-      </p>
-    </li>
-  </ul>
-</section>
+        <h2 class="benefits-title">Benefits</h2>
+        <ul class="benefits-list">
+          <li class="benefits-item">
+            <h3 class="benefits-subtitle">Strategy</h3>
+            <p class="benefits-text">
+              Our goal is to identify the business problem to walk away with the
+              perfect and creative solution.
+            </p>
+          </li>
+          <li class="benefits-item">
+            <h3 class="benefits-subtitle">Punctuality</h3>
+            <p class="benefits-text">
+              Bring the key message to the brand's audience for the best price
+              within the shortest possible time.
+            </p>
+          </li>
+          <li class="benefits-item">
+            <h3 class="benefits-subtitle">Diligence</h3>
+            <p class="benefits-text">
+              Research and confirm brands with the strongest digital growth
+              opportunities and minimize risk.
+            </p>
+          </li>
+          <li class="benefits-item">
+            <h3 class="benefits-subtitle">Technologies</h3>
+            <p class="benefits-text">
+              Design practice focused on digital experiences. We bring forth a
+              deep passion for problem-solving.
+            </p>
+          </li>
+        </ul>
+      </section>
 
       <section class="team">
         <h2 class="team-title">OurTeam</h2>
