--- a/index.html
+++ b/index.html
@@ -56,119 +56,147 @@
     </header>
 
     <main>
-      <section class="main-page">
-        <h1 class="main-title">Effective Solutions for Your Business</h1>
-        <button type="button" class="order-button">Order Service</button>
+      <section class="section-page">
+        <div class="container main-page">
+          <h1 class="main-title">Effective Solutions for Your Business</h1>
+          <div class="button-wrapper">
+            <button type="button" class="order-button">Order Service</button>
+          </div>
+        </div>
       </section>
 
       <section class="section2">
-        <h2 class="benefits-title">Benefits</h2>
-        <ul class="benefits-list">
-          <li class="benefits-item">
-            <h3 class="benefits-subtitle">Strategy</h3>
-            <p class="benefits-text">
-              Our goal is to identify the business problem to walk away with the
-              perfect and creative solution.
-            </p>
-          </li>
-          <li class="benefits-item">
-            <h3 class="benefits-subtitle">Punctuality</h3>
-            <p class="benefits-text">
-              Bring the key message to the brand's audience for the best price
-              within the shortest possible time.
-            </p>
-          </li>
-          <li class="benefits-item">
-            <h3 class="benefits-subtitle">Diligence</h3>
-            <p class="benefits-text">
-              Research and confirm brands with the strongest digital growth
-              opportunities and minimize risk.
-            </p>
-          </li>
-          <li class="benefits-item">
-            <h3 class="benefits-subtitle">Technologies</h3>
-            <p class="benefits-text">
-              Design practice focused on digital experiences. We bring forth a
-              deep passion for problem-solving.
-            </p>
-          </li>
-        </ul>
+        <div class="container section2-container">
+          <h2 class="benefits-title">Benefits</h2>
+          <ul class="benefits-list">
+            <li class="benefits-item">
+              <h3 class="benefits-subtitle">Strategy</h3>
+              <p class="benefits-text">
+                Our goal is to identify the business problem to walk away with
+                the perfect and creative solution.
+              </p>
+            </li>
+            <li class="benefits-item">
+              <h3 class="benefits-subtitle">Punctuality</h3>
+              <p class="benefits-text">
+                Bring the key message to the brand's audience for the best price
+                within the shortest possible time.
+              </p>
+            </li>
+            <li class="benefits-item">
+              <h3 class="benefits-subtitle">Diligence</h3>
+              <p class="benefits-text">
+                Research and confirm brands with the strongest digital growth
+                opportunities and minimize risk.
+              </p>
+            </li>
+            <li class="benefits-item">
+              <h3 class="benefits-subtitle">Technologies</h3>
+              <p class="benefits-text">
+                Design practice focused on digital experiences. We bring forth a
+                deep passion for problem-solving.
+              </p>
+            </li>
+          </ul>
+        </div>
       </section>
 
       <section class="team">
-        <h2 class="team-title">OurTeam</h2>
-        <ul class="team-list">
-          <li class="team-item">
-            <img src="./images/img1.jpg" alt="foto Mark Guerrero" width="264" />
-            <h3 class="team-subtitle">Mark Guerrero</h3>
-            <p class="team-text">Product Designer</p>
-          </li>
-          <li class="team-item">
-            <img src="./images/img2.jpg" alt="foto Tom Ford" width="264" />
-            <h3 class="team-subtitle">Tom Ford</h3>
-            <p class="team-text">Frontend Developer</p>
-          </li>
-          <li class="team-item">
-            <img src="./images/img3.jpg" alt="foto Camila Garcia" width="264" />
-            <h3 class="team-subtitle">Camila Garcia</h3>
-            <p class="team-text">Marketing</p>
-          </li>
-          <li class="team-item">
-            <img src="./images/img4.jpg" alt="foto Daniel Wilson" width="264" />
-            <h3 class="team-subtitle">Daniel Wilson</h3>
-            <p class="team-text">UI Designer</p>
-          </li>
-        </ul>
+        <div class="container team-container">
+          <h2 class="team-title">OurTeam</h2>
+          <ul class="team-list">
+            <li class="team-item">
+              <img
+                src="./images/img1.jpg"
+                alt="foto Mark Guerrero"
+                width="264"
+              />
+              <h3 class="team-subtitle">Mark Guerrero</h3>
+              <p class="team-text">Product Designer</p>
+            </li>
+            <li class="team-item">
+              <img src="./images/img2.jpg" alt="foto Tom Ford" width="264" />
+              <h3 class="team-subtitle">Tom Ford</h3>
+              <p class="team-text">Frontend Developer</p>
+            </li>
+            <li class="team-item">
+              <img
+                src="./images/img3.jpg"
+                alt="foto Camila Garcia"
+                width="264"
+              />
+              <h3 class="team-subtitle">Camila Garcia</h3>
+              <p class="team-text">Marketing</p>
+            </li>
+            <li class="team-item">
+              <img
+                src="./images/img4.jpg"
+                alt="foto Daniel Wilson"
+                width="264"
+              />
+              <h3 class="team-subtitle">Daniel Wilson</h3>
+              <p class="team-text">UI Designer</p>
+            </li>
+          </ul>
+        </div>
       </section>
 
       <section class="portfolio">
-        <h2 class="portfolio-heading">Our Portfolio</h2>
-        <ul class="portfolio-list">
-          <li class="portfolio-item">
-            <img src="./images/img21.jpg" alt="Banking App" width="360" />
-            <h3 class="project-title">Banking App</h3>
-            <p class="project-text">App</p>
-          </li>
-          <li class="portfolio-item">
-            <img src="./images/img22.jpg" alt="Cashless Payment" width="360" />
-            <h3 class="project-title">Cashless Payment</h3>
-            <p class="project-text">Marketing</p>
-          </li>
-          <li class="portfolio-item">
-            <img src="./images/img23.jpg" alt="Meditation App" width="360" />
-            <h3 class="project-title">Meditation App</h3>
-            <p class="project-text">App</p>
-          </li>
-          <li class="portfolio-item">
-            <img src="./images/img31.jpg" alt="Taxi Service" width="360" />
-            <h3 class="project-title">Taxi Service</h3>
-            <p class="project-text">Marketing</p>
-          </li>
-          <li class="portfolio-item">
-            <img
-              src="./images/img32.jpg"
-              alt="Screen Illustrations"
-              width="360"
-            />
-            <h3 class="project-title">Screen Illustrations</h3>
-            <p class="project-text">Design</p>
-          </li>
-          <li class="portfolio-item">
-            <img src="./images/img33.jpg" alt="Online Courses" width="360" />
-            <h3 class="project-title">Online Courses</h3>
-            <p class="project-text">Marketing</p>
-          </li>
-        </ul>
+        <div class="container portfolio-container">
+          <h2 class="portfolio-heading">Our Portfolio</h2>
+          <ul class="portfolio-list">
+            <li class="portfolio-item">
+              <img src="./images/img21.jpg" alt="Banking App" width="360" />
+              <h3 class="project-title">Banking App</h3>
+              <p class="project-text">App</p>
+            </li>
+            <li class="portfolio-item">
+              <img
+                src="./images/img22.jpg"
+                alt="Cashless Payment"
+                width="360"
+              />
+              <h3 class="project-title">Cashless Payment</h3>
+              <p class="project-text">Marketing</p>
+            </li>
+            <li class="portfolio-item">
+              <img src="./images/img23.jpg" alt="Meditation App" width="360" />
+              <h3 class="project-title">Meditation App</h3>
+              <p class="project-text">App</p>
+            </li>
+            <li class="portfolio-item">
+              <img src="./images/img31.jpg" alt="Taxi Service" width="360" />
+              <h3 class="project-title">Taxi Service</h3>
+              <p class="project-text">Marketing</p>
+            </li>
+            <li class="portfolio-item">
+              <img
+                src="./images/img32.jpg"
+                alt="Screen Illustrations"
+                width="360"
+              />
+              <h3 class="project-title">Screen Illustrations</h3>
+              <p class="project-text">Design</p>
+            </li>
+            <li class="portfolio-item">
+              <img src="./images/img33.jpg" alt="Online Courses" width="360" />
+              <h3 class="project-title">Online Courses</h3>
+              <p class="project-text">Marketing</p>
+            </li>
+          </ul>
+        </div>
       </section>
     </main>
     <footer class="page-footer">
-      <a class="logo footer-logo" href="./index.html"
-        >Web<span class="logo-part">Studio</span></a
-      >
-      <p class="footer-text">
-        Increase the flow of customers and sales for your business with digital
-        marketing & growth solutions.
-      </p>
+      <div class="container footer-container">
+        <a class="logo footer-logo" href="./index.html"
+          >Web<span class="logo-part">Studio</span></a
+        >
+        <p class="footer-text">
+          Increase the flow of customers and sales for your business with
+          digital marketing & growth solutions.
+        </p>
+      </div>
     </footer>
   </body>
 </html>
