--- a/index.html
+++ b/index.html
@@ -57,11 +57,11 @@
 
     <main>
       <section class="section-page">
-        <div class="container main-page">
+        < class="container main-page">
           <h1 class="main-title">Effective Solutions for Your Business</h1>
-          <div class="button-wrapper">
+          
             <button type="button" class="order-button">Order Service</button>
-          </div>
+          
         </div>
       </section>
 
