--- a/index.html
+++ b/index.html
@@ -57,11 +57,10 @@
 
     <main>
       <section class="section-page">
-        < class="container main-page">
+        <div class="container main-page">
           <h1 class="main-title">Effective Solutions for Your Business</h1>
-          
-            <button type="button" class="order-button">Order Service</button>
-          
+
+          <button type="button" class="order-button">Order Service</button>
         </div>
       </section>
 
