--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
 
       <section class="section2">
         <div class="container section2-container">
-          <h2 class="benefits-title">Benefits</h2>
+          <h2 class="visually-hidden">Benefits</h2>
           <ul class="benefits-list">
             <li class="benefits-item">
               <h3 class="benefits-subtitle">Strategy</h3>
