--- a/index.html
+++ b/index.html
@@ -110,13 +110,17 @@
                 alt="foto Mark Guerrero"
                 width="264"
               />
-              <h3 class="team-subtitle">Mark Guerrero</h3>
-              <p class="team-text">Product Designer</p>
+              <div class="subtitle-container">
+                <h3 class="team-subtitle">Mark Guerrero</h3>
+                <p class="team-text">Product Designer</p>
+              </div>
             </li>
             <li class="team-item">
               <img src="./images/img2.jpg" alt="foto Tom Ford" width="264" />
+              <div class="subtitle-container">
               <h3 class="team-subtitle">Tom Ford</h3>
               <p class="team-text">Frontend Developer</p>
+              </div>
             </li>
             <li class="team-item">
               <img
@@ -124,8 +128,10 @@
                 alt="foto Camila Garcia"
                 width="264"
               />
+              <div class="subtitle-container">
               <h3 class="team-subtitle">Camila Garcia</h3>
               <p class="team-text">Marketing</p>
+              </div>
             </li>
             <li class="team-item">
               <img
@@ -133,8 +139,10 @@
                 alt="foto Daniel Wilson"
                 width="264"
               />
+              <div class="subtitle-container"></div>
               <h3 class="team-subtitle">Daniel Wilson</h3>
               <p class="team-text">UI Designer</p>
+              </div>
             </li>
           </ul>
         </div>
