--- a/index.html
+++ b/index.html
@@ -118,8 +118,8 @@
             <li class="team-item">
               <img src="./images/img2.jpg" alt="foto Tom Ford" width="264" />
               <div class="subtitle-container">
-              <h3 class="team-subtitle">Tom Ford</h3>
-              <p class="team-text">Frontend Developer</p>
+                <h3 class="team-subtitle">Tom Ford</h3>
+                <p class="team-text">Frontend Developer</p>
               </div>
             </li>
             <li class="team-item">
@@ -129,8 +129,8 @@
                 width="264"
               />
               <div class="subtitle-container">
-              <h3 class="team-subtitle">Camila Garcia</h3>
-              <p class="team-text">Marketing</p>
+                <h3 class="team-subtitle">Camila Garcia</h3>
+                <p class="team-text">Marketing</p>
               </div>
             </li>
             <li class="team-item">
@@ -139,9 +139,9 @@
                 alt="foto Daniel Wilson"
                 width="264"
               />
-              <div class="subtitle-container"></div>
-              <h3 class="team-subtitle">Daniel Wilson</h3>
-              <p class="team-text">UI Designer</p>
+              <div class="subtitle-container">
+                <h3 class="team-subtitle">Daniel Wilson</h3>
+                <p class="team-text">UI Designer</p>
               </div>
             </li>
           </ul>
