--- a/index.html
+++ b/index.html
@@ -149,46 +149,66 @@
       </section>
 
       <section class="portfolio">
-        <div class="container portfolio-container">
+        <div class="container">
           <h2 class="portfolio-heading">Our Portfolio</h2>
           <ul class="portfolio-list">
             <li class="portfolio-item">
-              <img src="./images/img21.jpg" alt="Banking App" width="360" />
-              <h3 class="project-title">Banking App</h3>
-              <p class="project-text">App</p>
+              <img src="./images/project1.jpg" alt="Banking App" width="360" />
+              <div class="project-box">
+                <h3 class="project-title">Banking App</h3>
+                <p class="project-text">App</p>
+              </div>
             </li>
             <li class="portfolio-item">
               <img
-                src="./images/img22.jpg"
+                src="./images/project2.jpg"
                 alt="Cashless Payment"
                 width="360"
               />
-              <h3 class="project-title">Cashless Payment</h3>
-              <p class="project-text">Marketing</p>
-            </li>
-            <li class="portfolio-item">
-              <img src="./images/img23.jpg" alt="Meditation App" width="360" />
-              <h3 class="project-title">Meditation App</h3>
-              <p class="project-text">App</p>
-            </li>
-            <li class="portfolio-item">
-              <img src="./images/img31.jpg" alt="Taxi Service" width="360" />
-              <h3 class="project-title">Taxi Service</h3>
-              <p class="project-text">Marketing</p>
+              <div class="project-box">
+                <h3 class="project-title">Cashless Payment</h3>
+                <p class="project-text">Marketing</p>
+              </div>
             </li>
             <li class="portfolio-item">
               <img
-                src="./images/img32.jpg"
+                src="./images/project3.jpg"
+                alt="Meditation App"
+                width="360"
+              />
+              <div class="project-box">
+                <h3 class="project-title">Meditation App</h3>
+                <p class="project-text">App</p>
+              </div>
+            </li>
+            <li class="portfolio-item">
+              <img src="./images/project4.jpg" alt="Taxi Service" width="360" />
+              <div class="project-box">
+                <h3 class="project-title">Taxi Service</h3>
+                <p class="project-text">Marketing</p>
+              </div>
+            </li>
+            <li class="portfolio-item">
+              <img
+                src="./images/project5.jpg"
                 alt="Screen Illustrations"
                 width="360"
               />
-              <h3 class="project-title">Screen Illustrations</h3>
-              <p class="project-text">Design</p>
+              <div class="project-box">
+                <h3 class="project-title">Screen Illustrations</h3>
+                <p class="project-text">Design</p>
+              </div>
             </li>
             <li class="portfolio-item">
-              <img src="./images/img33.jpg" alt="Online Courses" width="360" />
-              <h3 class="project-title">Online Courses</h3>
-              <p class="project-text">Marketing</p>
+              <img
+                src="./images/project6.jpg"
+                alt="Online Courses"
+                width="360"
+              />
+              <div class="project-box">
+                <h3 class="project-title">Online Courses</h3>
+                <p class="project-text">Marketing</p>
+              </div>
             </li>
           </ul>
         </div>
