--- a/index.html
+++ b/index.html
@@ -64,8 +64,8 @@
         </div>
       </section>
 
-      <section class="section2">
-        <div class="container section2-container">
+      <section class="benefits">
+        <div class="container benefits-container">
           <h2 class="visually-hidden">Benefits</h2>
           <ul class="benefits-list">
             <li class="benefits-item">
