--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@
           <h2 class="portfolio-heading">Our Portfolio</h2>
           <ul class="portfolio-list">
             <li class="portfolio-item">
-              <img src="./images/project1.jpg" alt="Banking App" width="360" />
+              <img src="./images/img21.jpg" alt="Banking App" width="360" />
               <div class="project-box">
                 <h3 class="project-title">Banking App</h3>
                 <p class="project-text">App</p>
@@ -161,7 +161,7 @@
             </li>
             <li class="portfolio-item">
               <img
-                src="./images/project2.jpg"
+                src="./images/img22.jpg"
                 alt="Cashless Payment"
                 width="360"
               />
@@ -171,18 +171,14 @@
               </div>
             </li>
             <li class="portfolio-item">
-              <img
-                src="./images/project3.jpg"
-                alt="Meditation App"
-                width="360"
-              />
+              <img src="./images/img23.jpg" alt="Meditation App" width="360" />
               <div class="project-box">
                 <h3 class="project-title">Meditation App</h3>
                 <p class="project-text">App</p>
               </div>
             </li>
             <li class="portfolio-item">
-              <img src="./images/project4.jpg" alt="Taxi Service" width="360" />
+              <img src="./images/img31.jpg" alt="Taxi Service" width="360" />
               <div class="project-box">
                 <h3 class="project-title">Taxi Service</h3>
                 <p class="project-text">Marketing</p>
@@ -190,7 +186,7 @@
             </li>
             <li class="portfolio-item">
               <img
-                src="./images/project5.jpg"
+                src="./images/img32.jpg"
                 alt="Screen Illustrations"
                 width="360"
               />
@@ -200,11 +196,7 @@
               </div>
             </li>
             <li class="portfolio-item">
-              <img
-                src="./images/project6.jpg"
-                alt="Online Courses"
-                width="360"
-              />
+              <img src="./images/img33.jpg" alt="Online Courses" width="360" />
               <div class="project-box">
                 <h3 class="project-title">Online Courses</h3>
                 <p class="project-text">Marketing</p>
